--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -106,4 +106,60 @@ button:focus-visible {
   font-size: 14px;
   padding: 12px;
   font-weight: 600;
+  background-color: #009EE2;
+  border-color: #009EE2;
 }
+
+/*ACA ABAJO ESTILO DE TABLAS*/
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+  font-family: 'Arial', sans-serif;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+thead th {
+  padding: 12px;
+  text-align: left;
+  font-weight: bold;
+  border-bottom: 2px solid #ddd;
+  text-align: center;
+}
+
+tbody tr {
+  border-bottom: 1px solid #ddd;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tbody td {
+  padding: 12px;
+  text-align: left;
+  text-align: center;
+}
+
+tbody tr:hover {
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+th, td {
+  border: 1px solid #ddd;
+}
+
+.modal-title{
+  color: #009EE2;
+}
+
+.fa{
+  color: #009EE2;
+}
+
