--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -44,8 +44,8 @@
   font-size: 14px;
   padding: 12px;
   font-weight: 600;
-  background-color: #009EE2;
-  border-color: #009EE2;
+  /* background-color: #009EE2;
+  border-color: #009EE2; */
 }
 .obtn{
   text-align: center;
@@ -91,11 +91,6 @@
   justify-content: center;
 }
 
-/* IMAGEN */
-/* .card-img-top{
-  width: 348px;
-  height: 344px;
-} */
 /*ACA ABAJO ESTILO DE TABLAS*/
 
 table {
@@ -467,4 +462,44 @@ input, select, textarea {
   border-color: #009EE2; /* Color del borde para el animal seleccionado */
   background-color: #f0f8ff; /* Fondo ligeramente azul para mostrar selección */
   transform: scale(1.1); /* Agrandar un poco el tamaño */
+}
+
+
+/* FOOTER  */
+
+.contact-column {
+  background-color: #d6eaf8; /* Fondo azul claro */
+  color: #1d3557; /* Texto en azul oscuro */
+  border-radius: 80px 80px 0 0; /* Bordes redondeados solo arriba */
+  padding: 1rem; /* Espaciado interno */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para destacar */
+  margin-top: 1rem; /* Espaciado superior */
+}
+
+/* Logos en el footer */
+.footer-logo {
+  height: 50px;
+  width: auto;
+}
+
+/* Íconos de redes sociales */
+.social-icon {
+  color: #6A9FCA; /* Color inicial */
+  transition: color 0.3s ease; /* Transición suave */
+}
+
+.social-icon:hover {
+  color: #009EE2; /* Color al pasar el cursor */
+}
+.footer-image-container {
+  background-color: #6A9FCA; /* Fondo azul claro */
+  text-align: center; /* Centrar la imagen */
+  padding: 1rem 0; /* Espaciado arriba y abajo */
+  border-radius: 150px 150px 0 0;
+}
+
+.footer-image {
+  max-width: 60%; /* Que la imagen no exceda el ancho del contenedor */
+  height: auto; /* Mantener proporciones */
+  
 }
