Correcciones, @media inicio

--- a/Frontend/vite-project/src/components/inicio.css
+++ b/Frontend/vite-project/src/components/inicio.css
@@ -34,8 +34,6 @@
     font-weight: bold;
   }
 
-
-
   .cat1 {
     z-index: 3;
     left: -20%;
@@ -79,4 +77,104 @@
 
   .parallax-layer.dog2 img {
     height: 40vh; /* Tamaño específico para cat1 */
+  }
+
+  @media (max-width: 1180px) {
+    .cat2 {
+        left: -20%;
+    }
+  }
+
+  @media (max-width: 900px) {
+
+    .parallax-layer.cat1 img {
+        height: 80vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.cat2 img {
+        height: 50vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog1 img {
+        height: 40vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog2 img {
+        height: 30vh; /* Tamaño específico para cat1 */
+      }
+
+  }
+
+  @media (max-width: 900px) {
+
+    .parallax-layer.cat1 img {
+        height: 70vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.cat2 img {
+        height: 40vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog1 img {
+        height: 30vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog2 img {
+        height: 20vh; /* Tamaño específico para cat1 */
+      }
+
+  }
+
+  @media (max-width: 700px) {
+
+    .parallax-layer.cat1 img {
+        height: 60vh; /* Tamaño específico para cat1 */
+      }
+
+  }
+
+  @media (max-width: 550px) {
+
+    .parallax-layer.cat1 img {
+        height: 40vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.cat2 img {
+        height: 20vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog1 img {
+        height: 30vh; /* Tamaño específico para cat1 */
+      }
+    
+      .parallax-layer.dog2 img {
+        height: 20vh; /* Tamaño específico para cat1 */
+      }
+
+      .cat1 {
+        z-index: 3;
+        left: -20%;
+        
+      }
+      
+      .dog1 {
+        z-index: 2;
+        left: -35%;
+        top: 4%;
+      }
+    
+      .cat2 {
+        z-index: 1;
+        left: -20%;
+        top: -9%;
+      }
+      
+      .dog2 {
+        z-index: 1;
+        top: -10%;
+        left: -30%;
+      }
+
+
+
   }
