Correcciones de estilos

--- a/Frontend/vite-project/src/components/Login/InicioSesion.css
+++ b/Frontend/vite-project/src/components/Login/InicioSesion.css
@@ -161,7 +161,7 @@ button[type="submit"]:hover {
     }
     .form-logo-mobile {
       display: block;
-      text-align: left;
+      text-align: center;
       margin-bottom: 15px;
     }
   
