--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -19,7 +19,7 @@
 }
 
 .maven-pro-body {
-  font-family: "Albert Sans", sans-serif;
+  font-family: "Maven Pro", "Albert Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500; 
   font-style: normal;
