Mejorar la interfaz de búsqueda de turnos y agregar estilos a los botones

--- a/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
+++ b/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
@@ -17,7 +17,17 @@
 }
 
 
+.uniform-button {
+    min-width: 100px; /* Define un ancho mínimo */
+    max-width: 150px; /* Opcional: define un ancho máximo si es necesario */
+    text-align: center; /* Centra el texto dentro del botón */
+  }
   
+  .button-container {
+    display: flex;
+     /* Centra horizontalmente cada botón */
+    align-items: center; /* Alinea verticalmente si es necesario */
+  }  
 
 
 
@@ -49,5 +59,15 @@
    font-weight: bold;
    text-align: left;
 }
+
+.form-group{
+    width: 80%;
+}
+
+.buttons-footer{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+
 }
 
