Correccion de estilos turnosSecretaria.css

--- a/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
+++ b/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
@@ -29,7 +29,26 @@
     align-items: center; /* Alinea verticalmente si es necesario */
   }  
 
+.form-group-secretaria{
+    margin-bottom: 0;
+}
 
+hr{
+    color: #aba9a9;
+}
+
+table th {
+    vertical-align: middle;
+    text-align: center; /* Opcional: centra también horizontalmente */
+    padding: 10px; /* Opcional: agrega espacio alrededor del texto */
+  }
+  
+  /* Si deseas aplicarlo solo a esta tabla específica */
+  .mi-tabla thead th {
+    vertical-align: middle;
+    text-align: center;
+    padding: 10px;
+  }
 
 
 @media (max-width: 767px) {
@@ -60,7 +79,7 @@
    text-align: left;
 }
 
-.form-group{
+.form-group-secretaria{
     width: 80%;
 }
 
